--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,6 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "files.encoding": "gb2312"
 }
